[package]
name = "watson-discovery-tool"
version = "3.0.0" # This tool supplants `wdscli` 2.x.
authors = ["Bruce Adams <bruce.adams@acm.org>"]
description = "Command line tool for the Watson Discovery Service API."

[dependencies]
clap = "2.26"

[dependencies.stomp]
path = "/Users/ba/stomp-rs"

[dependencies.stomp-macros]
path = "/Users/ba/stomp-rs/stomp-macros"
