[package]
name = "watson-discovery-tool"
version = "3.0.0"
authors = ["Bruce Adams <bruce.adams@acm.org>"]
description = "Command line access to Watson Discovery Service."

[dependencies.wdsapi]
git = "https://github.com/bruceadams/wdsapi.git"

[dependencies.watson-discovery-api]
git = "https://github.com/bruceadams/watson-discovery-api.git"
features = ["client"]

[dependencies]
clap = "2"
crossbeam = "0"
futures = "0.1"
hyper = "0.10"
rayon = "0"
serde_json = "1.0"
swagger = "0.3"
walkdir = "1"
